# ComfyUI-EffectErase

./: .gitignore  README.md  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
EffectErase/diffsynth/models/: kolors_text_encoder.py  stepvideo_dit.py
EffectErase/diffsynth/pipelines/: wan_video.py
EffectErase/diffsynth/prompters/: omost.py
EffectErase/script/: test_remove.sh
