[project]
name = "effecterase-node"
description = "ComfyUI Interface for FudanCVL EffectErase"
version = "1.0.4"
license = {text = "Apache-2.0"}

[project.urls]
Repository = "https://github.com/alisson-anjos/ComfyUI-EffectErase"

[tool.comfy]
PublisherId = "alisson-anjos"
DisplayName = "ComfyUI-EffectErase"
Icon = ""
includes = []
